# enigma

./: .gitignore  CMakeLists.txt  README.md  decrypt.c  main.c
.github/: build
.github/workflows/: release.yml  releases.yml
tests/: prng_test1.c  prng_test2.c  prng_test3.c  prng_tests.c
utils/: base64.c  base64.h  crypto.c  crypto.h  includes.h  interface.c  interface.h  prng.c  prng.h
